FlightPath 5.x Changelog
========================

2017-06-19
  Tweaked the reduce_whitespace function to make it slightly smarter.
  
  Working on new FormAPI form for editing degrees.
  

2017-06-17
  Fixed bug where remainder hours on a split substitution were showing as the full hours
  in Excess credit.


2017-04-21
  Added a new behavior to when FlightPath saves advising session from POST.  Instead of
  simply continuing execution, it can now reload the page via fp_goto().  This prevents
  certain bugs from appearing if the user hits "Refresh" on the browser, causing the
  POST to submit again.  


2017-03-27
  Fixed a bug where substitutions and moved courses were not showing up correctly
  immediately after changing a degree option (like adding or removing a track).  This
  was due to the FlightPath object not using the same reference to the student object
  after a non-cache load.
  
  Fixed an issue where hooks could not always be invoked from hook_init.  This was
  because hook_init was being called as soon as the module was loaded.  Instead, the logic
  was changed so that all modules are loaded first, THEN hook_init is called.


2017-03-15
  Fixed another bug where courses worth zero hours were not showing up in lists correctly.
  

2017-03-14
  Fixed bug where course->load_descriptive_data() actually reset bool_ghost_hour booleans
  for courses.  This meant that courses worth MORE than zero hours in the database would show up as worth
  1 hour, even if they earned zero hours.  Added a simple argument to disable that behavior, FALSE by default.
  
  The same bug was causing ghost hour courses to show as worth "1 hour" in popups.
    

2017-03-09
  Fixed bug where course repeats were not being excluded correctly.
  
  Fixed bug where a course could not be removed from a group if it was being used as a sub in a different degree's group.
  

2017-03-05
  Added new course sort policy (to be considered in 'beta' for the time being,